# virtual-assistant

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bot.py  cache.py  pyproject.toml  requirements.txt  server.py
acshandler/serializers/acs/: __init__.py  acs_serializer.py
helpers/: rag_searcher.py  tools.json
services/: context_service.py  llm_service.py  stt_service.py  tts_service.py
